--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,19 +27,18 @@
 
 
 stages:
-  - execute-script
+  - execute-scripts
 
-variables:
-  GIT_STRATEGY: clone
-
-# Job pour les événements "issue"
-execute-python-on-issue-update:
-  stage: execute-script
+execute-python-scripts:
+  stage: execute-scripts
   script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - when: always  # Permet d'éviter un pipeline vide
+  tags:
+    - python
+  only:
+    - main
+
+
 
 
