--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-stages:          # List of stages for jobs, and their order of execution
+stages:          
   - execute-script
 
 
@@ -11,9 +11,8 @@ execute-python-on-issue-update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
     - if: '$CI_PIPELINE_SOURCE == "web"'
-    # - if: '$CI_PIPELINE_SOURCE == "trigger"' 
+    - if: '$CI_PIPELINE_SOURCE == "trigger"' 
 
 # Job pour les événements "merge_request"
 execute-python-on-pr-update:
@@ -22,6 +21,6 @@ execute-python-on-pr-update:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
-    # - if: '$CI_PIPELINE_SOURCE == "trigger"' 
+    - if: '$CI_PIPELINE_SOURCE == "trigger"' 
 
 
