--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,6 @@
 #     - if: '$CI_PIPELINE_SOURCE == "trigger"' 
 
 
-
 stages:          
   - execute-script
 
@@ -33,7 +32,7 @@ variables:
 
 workflow:
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" || $CI_PIPELINE_SOURCE == "trigger" && $CI_PARENT_PIPELINE_ID == null'
+    - if: '$CI_PIPELINE_SOURCE == "web" || ($CI_PIPELINE_SOURCE == "trigger" && $CI_PARENT_PIPELINE_ID == null)'
 
 # Job pour les événements "issue"
 execute-python-on-issue-update:
@@ -52,4 +51,3 @@ execute-python-on-pr-update:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
     - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_PARENT_PIPELINE_ID == null'
-
