--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -161,9 +161,9 @@
 
 stages:
   - execute-script
-  # - build
-  # - test
-  # - deploy
+  - build
+  - test
+  - deploy
 
 variables:
   GIT_STRATEGY: clone
@@ -193,47 +193,47 @@ execute-python-on-pr-update:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
   interruptible: true
 
-# # Job de débogage pour vérifier le contexte du pipeline
-# debug_pipeline:
-#   stage: execute-script
-#   script:
-#     - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
-#     - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
-#     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-#   interruptible: true
+# Job de débogage pour vérifier le contexte du pipeline
+debug_pipeline:
+  stage: execute-script
+  script:
+    - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
+    - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
+    - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+  interruptible: true
 
-# build-job:
-#   stage: build
-#   script:
-#     - echo "Compiling the code..."
-#     - echo "Compile complete."
-#   interruptible: true
+build-job:
+  stage: build
+  script:
+    - echo "Compiling the code..."
+    - echo "Compile complete."
+  interruptible: true
 
-# unit-test-job:
-#   stage: test
-#   script:
-#     - echo "Running unit tests... This will take about 60 seconds."
-#     - sleep 60
-#     - echo "Code coverage is 90%"
-#   interruptible: true
+unit-test-job:
+  stage: test
+  script:
+    - echo "Running unit tests... This will take about 60 seconds."
+    - sleep 60
+    - echo "Code coverage is 90%"
+  interruptible: true
 
-# lint-test-job:
-#   stage: test
-#   script:
-#     - echo "Linting code... This will take about 10 seconds."
-#     - sleep 10
-#     - echo "No lint issues found."
-#   interruptible: true
+lint-test-job:
+  stage: test
+  script:
+    - echo "Linting code... This will take about 10 seconds."
+    - sleep 10
+    - echo "No lint issues found."
+  interruptible: true
 
-# deploy-job:
-#   stage: deploy
-#   environment: production
-#   script:
-#     - echo "Deploying application..."
-#     - echo "Application successfully deployed."
-#   interruptible: false  # Ne pas annuler ce job (important pour la production)
+deploy-job:
+  stage: deploy
+  environment: production
+  script:
+    - echo "Deploying application..."
+    - echo "Application successfully deployed."
+  interruptible: false  # Ne pas annuler ce job (important pour la production)
 
 
 
