--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -208,8 +208,9 @@ build-job:
   stage: build
   script:
     - echo "python3 /home/gitlab-runner/scripts-secures/script_issue.py"
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+    - echo "python3 /home/gitlab-runner/scripts-secures/script_pr.py"
+    # - echo "Compiling the code..."
+    # - echo "Compile complete."
   interruptible: true
 
 unit-test-job:
