--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -207,7 +207,7 @@ variables:
 build-job:
   stage: build
   script:
-    - echo "python3 /home/gitlab-runner/scripts-secures/script_issue.py"
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
     - echo "python3 /home/gitlab-runner/scripts-secures/script_pr.py"
     - echo "Compiling the code..."
     - echo "Compile complete."
